# PsiAudit

./: README.md  pyproject.toml  requirements.txt  run_experiments.py  run_pipeline_full.ipynb  verify_results.py
Results/data/: audit_full.csv  audit_multiseed.csv  audit_multiseed_raw.csv  comparative_combined.csv  comparative_diagnostics.csv  comparative_multiseed.csv  comparative_multiseed_raw.csv  cost_scaling.csv  delta_U.csv  delta_U_multiseed.csv  delta_U_multiseed_raw.csv  downstream_accuracy_matrix.csv  downstream_conditional_correlation.csv  downstream_correlations.csv  downstream_results.csv  downstream_with_components.csv  scaling_full.csv  scaling_multiseed.csv  scaling_multiseed_raw.csv  sensitivity_gamma.csv  sensitivity_gate_ablation_regimeA.csv  sensitivity_gate_ablation_regimeB.csv  sensitivity_weights.csv
Results/metadata/: analysis_metadata.json  run_metadata.json
psiaudit/: __init__.py  ansatze.py  audit.py  core.py  trajectories.py
scripts/: quick_audit.py
tests/: test_invariants.py
